--- a/.env.thorondor
+++ b/.env.thorondor
@@ -1,1 +1,6 @@
-test
+#Global:
+EXTRA_FILES=https://github.com/WSTxda/MicroG-RE/releases/latest@MicroG.RE.apk
+PATCH_APPS=youtube,messenger
+GLOBAL_CLI_DL=https://github.com/inotia00/revanced-cli
+GLOBAL_PATCHES_DL=https://github.com/YT-Advanced/ReX-patches
+GLOBAL_PATCHES_JSON_DL=https://github.com/YT-Advanced/ReX-patches
